fix(client): stabilize detail rendering and navigation